--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
 
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<link rel="icon" type="image/png" href="resources/images/favicon.png">
 </head>
 
 <body>
+	
+	<div class="sticky-container">
+    <ul class="sticky">
+        <li>
+            <a href="http://www.github.com/cbritt0n" target="_blank"><img src="resources/images/github.png" width="32" height="32"></a>
+        </li>
+		<li>
+            <a href="https://www.linkedin.com/in/cbritt0n" target="_blank"><img src="resources/images/linkedin.png" width="32" height="32"></a>
+		</li>
+		<li>
+            <a href="resources/downloads/ChristianBrittonResume.docx" target="_blank"><img src="resources/images/cv.gif" width="32" height="32"></a>
+		</li>
+    </ul>
+</div>
+    
 <!-- Header content -->
 <header>
   <div class="profileLogo">
@@ -23,7 +39,7 @@
   </div>
   <div class="profilePhoto"> 
     <!-- Profile photo --> 
-    <img src="resources/images/profile.png" alt="sample" height="200" width="200"> </div>
+    <img src="resources/images/profilePicture.png" alt="sample" height="200" width="200"> </div>
   <!-- Identity details -->
   <section class="profileHeader">
     <h1>Christian Britton</h1>
@@ -31,7 +47,10 @@
     <hr>
     <p>&nbsp;</p>
   </section>
-<!-- Links to Social network accounts --></header>
+	
+	
+</header>
+
 <!-- content -->
 <section class="mainContent"> 
   <!-- Contact details -->
@@ -53,7 +72,7 @@
     <article class="section2Content">
       <h2 class="sectionContentTitle">Barrow County School System</h2>
       <h3 class="sectionContentSubTitle">Networking Intern / 2014 - Present</h3>
-      <p class="sectionContent"><strong>I worked on computers with multiple operating systems such as Linux, Microsoft Windows, and OSX. I also have experience with server-side components such as file servers, email servers, switches, etc. I also worked with teachers to understand their specific issues and problems.</strong></p>
+      <p class="sectionContent"><strong>I worked on computers with multiple operating systems such as Linux, Microsoft Windows, and OSX. I also have experience with server-side components such as file servers, email servers, switch configurations, etc. I also worked with teachers to address their specific needs as they pertain to learning with technology in the classroom. I assisted in the sale of many devices to teachers in hopes that the technology may help them in their teaching endeavours. I used different software packages such as Adobe Creative Cloud to edit audio and video for different School System functions.</strong></p>
     </article>
     <h2 class="sectionTitle">Education</h2>
     <hr class="sectionTitleRule">
@@ -63,21 +82,16 @@
       <h2 class="sectionContentTitle">University of Georgia</h2>
       <h3 class="sectionContentSubTitle"> Computer Science / 2016 - Present</h3>
       <p class="sectionContent"><strong id="docs-internal-guid-b7e0cca6-ef49-3f9a-a7f3-3ce9f962af8a">Notable Courses: Software Development, Systems Programming, Introduction to Theory of Computing, Discrete </strong><strong id="docs-internal-guid-b7e0cca6-ef49-79bf-5171-cff810b1f341">Mathematics</strong></p>
-      <p class="sectionContent"><strong>Skills: Java, Python, C, C++, C#, Swift, Javascript, SQL, PHP, HTML, CSS, R, Ruby</strong></p>
+      <p class="sectionContent"><strong>Languages: Java, Python, C, C++, C#, Swift, Javascript, SQL, PHP, HTML, CSS, R, Ruby</strong></p>
     </article>
     <!-- Second Title & company details  -->
     <!-- Replicate the above Div block to add more title and company details -->
     <article class="section2Content"> </article>
     <!-- Second Title & company details  --><!-- Replicate the above Div block to add more title and company details --> 
   </section>
-  <!-- Links to expore your past projects and download your CV -->
-  <aside class="externalResourcesNav"><span class="stretch"></span><span class="stretch"></span></aside>
 </section>
 <footer>
   <hr>
-  <p class="footerDisclaimer"><a href="resources/downloads/ChristianBrittonResume.docx" title="Download Resume" target="new">Download Full CV</a></p>
-	<p class="footerDisclaimer"><a href="https://www.linkedin.com/in/cbritt0n/" title="LinkedIn Link" target="new">LinkedIn</a>
-	</p>
   <p class="footerNote">Christian Britton<span></span></p>
 </footer>
 </body>
