--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="resources/styles/index.css" rel="stylesheet" type="text/css">
 
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<script>var __adobewebfontsappname__="dreamweaver"</script><script src="https://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 <link rel="icon" type="image/png" href="resources/images/favicon.png">
 </head>
 
@@ -60,7 +60,6 @@
     <hr class="sectionTitleRule2">
     <div class="section1Content">
       <p><span>Primary Email :</span> <a href="mailto:brittonca@icloud.com">brittonca@icloud.com</a></p>
-      <p><span>Secondary Email:</span> <a href="mailto:cab29463@uga.edu">cab29463@uga.edu</a></p>
     </div>
   </section>
   <!-- Previous experience details -->
