updating website to match CV

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christian Britton</title>
 
-    <link rel="icon" type="image/png" href="resources/images/favicon.png">
+    <link rel="icon" type="image/png" href="resources/images/profile.jpg">
     <link href="resources/styles/index.css" rel="stylesheet" type="text/css">
   </head>
 
@@ -38,57 +38,115 @@
         <h1><a href="mailto:brittonca@icloud.com">Christian Britton</a></h1>
         <h3>Software Engineer at Cox Communications, former Cyber Security student and reseacher at UGA</h3>
       </div>
-      <br />
     </header>
 
+    <br />
+
     <!-- Main content -->
-    <section class="mainContent">
+    <div class="section2">
 
-      <!-- Education and Work Experience -->
-      <section class="section2">
+      <!-- Education  -->
+      <h2 class="sectionTitle">Education</h2>
+      <hr class="sectionTitleRule">
+      <hr class="sectionTitleRule2">
 
-        <!-- Education  -->
-        <h2 class="sectionTitle">Education</h2>
-        <hr class="sectionTitleRule">
-        <hr class="sectionTitleRule2">
+      <div class="section2Content">
+        <!-- UGA - Master's -->
+        <div style='display: inline-flex;'>
+          <div class='child'><img src="resources/images/ugalogo.png" alt="UGA Logo" height="55" width="50"></div>
+          <div class='child'><h2 class="sectionContentTitle">University of Georgia</h2></div>
+        </div>
+        <h3 class="sectionContentSubTitle"><strong>Master's Degree in Computer Science | 2019 - 2021</strong></h3>
+        <p class="sectionContent"><strong>Notable Courses:</strong> Cyber Forensics, Secure Programming, IoT Security, Cyber Security, Computer Networks, Advanced Algorithms, Approximation Algorithms, Computer Finance, Parallel Simulation, and Financial Market Simulation</p>
+        <p class="sectionContent"><strong>Project Experience:</strong> Rust, Python, C++, C#, C, Java, JavaScript, Socket Programming, Spring</p>
 
-        <article class="section2Content">
-          <!-- Master's -->
-          <h2 class="sectionContentTitle">University of Georgia</h2>
-          <h3 class="sectionContentSubTitle"><strong>Master's Degree in Computer Science | 2019 - 2021</strong></h3>
-          <p class="sectionContent"><strong>Notable Courses:</strong> Cyber Forensics, Secure Programming, IoT Security, Cyber Security, Computer Networks, Advanced Algorithms, Approximation Algorithms, Computer Finance, Parallel Simulation, and Financial Market Simulation</p>
-          <p class="sectionContent"><strong>Project Experience:</strong> Rust, Python, C++, C#, C, Java, JavaScript, Socket Programming, Spring</p>
+        <br />
 
-          <br />
+        <!-- UGA - Bachelor's -->
+        <h3 class="sectionContentSubTitle"><strong>Bachelor's Degree in Computer Science | 2016 - 2020</strong></h3>
+        <p class="sectionContent"><strong>Notable Courses:</strong> Computer Networks, Operating Systems, Human-Computer Interaction, Computer Architecture, Algorithms, and Software Development</p>
+        <p class="sectionContent"><strong>Project Experience:</strong> Python, C++, C, Java, JavaScript, Perl, Spring</p>
+      </div>
 
-          <!-- Bachelor's -->
-          <h3 class="sectionContentSubTitle"><strong>Bachelor's Degree in Computer Science | 2016 - 2020</strong></h3>
-          <p class="sectionContent"><strong>Notable Courses:</strong> Computer Networks, Operating Systems, Human-Computer Interaction, Computer Architecture, Algorithms, and Software Development</p>
-          <p class="sectionContent"><strong>Project Experience:</strong> Python, C++, C, Java, JavaScript, Perl, Spring</p>
-        </article>
 
-        <!-- Work Experience -->
-        <h2 class="sectionTitle">Experience</h2>
-        <hr class="sectionTitleRule">
-        <hr class="sectionTitleRule2">
+      <!-- Work Experience -->
+      <h2 class="sectionTitle">Experience</h2>
+      <hr class="sectionTitleRule">
+      <hr class="sectionTitleRule2">
 
-        <article class="section2Content">
-          <!-- Cox Communications -->
-          <h2 class="sectionContentTitle">Cox Communications</h2>
-          <h3 class="sectionContentSubTitle"><strong>Software Engineer II | 2021 - Present</strong></h3>
-          <p class="sectionContent">I worked on computers with multiple operating systems such as Linux, Microsoft Windows, and OSX. I also have experience with server-side components such as file servers, email servers, switch configurations, etc. I also worked with teachers to address their specific needs as they pertain to learning with technology in the classroom. I assisted in the sale of many devices to teachers in hopes that the technology may help them in their teaching endeavours. I used different software packages such as Adobe Creative Cloud to edit audio and video for different School System functions.</p>
-          
-          <br />
-
-          <!-- Barrow County School System -->
-          <h2 class="sectionContentTitle">Barrow County School System</h2>
-          <h3 class="sectionContentSubTitle"><strong>Networking Intern | 2014 - 2021</strong></h3>
-          <p class="sectionContent">I worked on computers with multiple operating systems such as Linux, Microsoft Windows, and OSX. I also have experience with server-side components such as file servers, email servers, switch configurations, etc. I also worked with teachers to address their specific needs as they pertain to learning with technology in the classroom. I assisted in the sale of many devices to teachers in hopes that the technology may help them in their teaching endeavours. I used different software packages such as Adobe Creative Cloud to edit audio and video for different School System functions.</p>
+      <div class="section2Content">
+        <!-- Cox Communications -->
+        <h2 class="sectionContentTitle">Cox Communications</h2>
+        <h3 class="sectionContentSubTitle"><strong>Software Engineer II | 2021 - Present</strong></h3>
+        <ul class="sectionContent" style="padding-inline-start: 15px;">
+          <li>Develop, evolve, and maintain an internal Sales Communications and Knowledge Management (KM) platform that is written in Python, HTML, CSS, JavaScript, and JQuery and is utilized by frontline, 3rd party, and retail Sales Agents</li>
+          <li>Maintain strict Model-View-Controller (MVC) principles across the whole team's tech stack</li>
+          <li>Maintain a deployment pipeline through Development, Quality Assurance, and Production environments via Jenkins Pipeline using CI/CD principles</li>
+          <li>Take the lead on multiple projects that require input from internal and 3rd party teams</li>
+          <li>Perform weekly security scanning and patching for the team's managed systems via an internal security suite and Prisma Cloud Monitoring</li>
+          <li>Perform maintenance and patching for the team's managed systems by understanding and updating Dockerfiles and build files as well as using multiple Platform-as-a-Service (PaaS) systems via a Shell</li>
+          <li>Develop and conduct User Acceptance Testing (UAT) on the team's environments during the deployment process</li>
+          <li>Use and provide feedback on REST APIs from multiple internal and external services to ingest KM content, provide translation services, allow user profile services, etc.</li>
+          <li>Gather feedback from key stakeholders, create user stories, and seek to improve the functionalities of the KM system</li>
+          <li>Partner with Content Admins to better understand and evolve their use of the KM platform</li>
+          <li>Partner with other Sales teams to produce KM solutions on my team's platforms</li>
+          <li>Utilize captured data from Sales Agents via Adobe Analytics, JupyterLab, and Excel to compile pertinent metrics and dashboards for active projects</li>
+          <li>Provide weekly and monthly metric updates for pertinent KPIs</li>
+          <li>Maintain daily project updates in Airtable and Jira to support Agile Development across the team</li>
+          <li>Develop a Graph Database (GDBMS) to house Agent-produced data from using the team's systems and utilize the database and a Machine Learning pipeline to improve and inform the Search experience</li>
+          <li>Onboard New Relic as an Application and Infrastructure Monitoring tool across all nonproduction and production environments</li>
+          <li>Managed the migration of the team's infrastructure from Rancher to Google Anthos from a DevOps perspective</li>
+          <li>Participate in weekly Change Advisory Board meetings to inform leaders about changes to company software environments as well as any degradations of Sales-related services</li>
+          <li>Participate in the Python@Cox group to partner with other teams and expand understanding of the Python coding language</li>
+          <li>Attend company-sponsored internship fairs to network with new teams and expand knowledge of Cox-related software</li>
+          <li>Maintain a constantly developing understanding of the newest Common Vulnerabilities and Exposures (CVEs)</li>
+          <li>Work with multiple mentors to expand Sales, Business, and technology-related knowledge</li>
+        </ul>
         
-        </article>
+        <br />
 
-      </section>
-    </section>
+        <!-- Barrow County School System - Technical Analyst -->
+        <h2 class="sectionContentTitle">Barrow County School System</h2>
+        <h3 class="sectionContentSubTitle"><strong>Technical Analyst | 2018 - 2021</strong></h3>
+        <ul class="sectionContent" style="padding-inline-start: 15px;">
+          <li>Provide maintenance to district devices including but not limited to desktop computers, laptop computers, Chromebooks, switches, Virtual Reality setups, and monitors</li>
+          <li>Maintain a broadcast studio which includes the maintenance of multiple streaming encoders</li>
+          <li>Work directly with teachers to address specific needs regarding how technology is used within their classroom</li>
+          <li>Understand lesson plans and how to provide students with a technology rich lesson</li>
+          <li>Diagnose networking issues related to the end user</li>
+          <li>Troubleshoot wireless network issues</li>
+          <li>Manage the user accounts of teacher and student Google accounts as well as teacher and student Office 365 accounts</li>
+          <li>Maintain a Voice Over IP system</li>
+          <li>Received 8 “Shining Moments” awards from the Sims Academy of Innovation and Technology</li>
+        </ul>
+
+        <br />
+
+        <!-- Barrow County School System - ITS Intern -->
+        <h2 class="sectionContentTitle">Barrow County School System</h2>
+        <h3 class="sectionContentSubTitle"><strong>ITS Intern | 2016 - 2018</strong></h3>
+        <ul class="sectionContent" style="padding-inline-start: 15px;">
+          <li>Assisted in the day-to-day maintenance and repair of all district computer systems. This includes Windows devices, both desktops and notebooks, Chromebooks, and Mac hardware</li>
+          <li>Maintained, repaired, and mounted interactive projector systems used for instruction</li>
+          <li>Work directly with teachers to address specific needs regarding how technology is used within their classroom</li>
+          <li>Provided support for Chromebooks and iPads. This includes the use of the Chrome Management Console to help manage chrome devices and district G-Suite Accounts as well as using AirWatch for managing iPads and app deployment</li>
+          <li>Supported a new streaming platform being rolled out to Elementary Schools</li>
+          <li>Helped schools create audio and video presentations of schools using Adobe Creative Cloud</li>
+        </ul>
+
+        <br />
+
+        <!-- Barrow County School System - Networking Intern -->
+        <h2 class="sectionContentTitle">Barrow County School System</h2>
+        <h3 class="sectionContentSubTitle"><strong>Networking Intern | 2014 - 2016</strong></h3>
+        <ul class="sectionContent" style="padding-inline-start: 15px;">
+          <li>Served as a bridge between the Technology and Teaching and Learning departments</li>
+          <li>Provided hardware and software support for Chromebooks and iPads</li>
+          <li>Assisted in the day-to-day maintenance and repair of all district computer systems. This includes Windows devices, both desktops and notebooks, Chromebooks, and Mac hardware</li>
+        </ul>
+
+      </div>
+    </div>
     <footer>
       <hr>
       <p class="footerNote">Website made by Christian Britton and hosted on Github Pages</p>
