updated padding-bottom for the footer

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p class="sectionContent"><strong>Project Experience:</strong> Python, C++, C, Java, JavaScript, Perl, Spring</p>
       </div>
 
+      <br />
 
       <!-- Work Experience -->
       <h2 class="sectionTitle">Experience</h2>
@@ -147,9 +148,11 @@
 
       </div>
     </div>
+
+    <hr class="sectionTitleRule">
+
     <footer>
-      <hr>
-      <p class="footerNote">Website made by Christian Britton and hosted on Github Pages</p>
+      <div class="footerNote">Website made by Christian Britton and hosted on Github Pages</div>
     </footer>
   </body>
 </html>
